--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h2>Wow, fuck the what</h2>
-<p>This domain is currently for sale.</p>
+<p>This domain is currently for <a href="https://www.godaddy.com/domainsearch/find?checkAvail=1&domainToCheck=wowfuckthewhat">sale</a>.</p>
 
 </body>
 <footer>
