--- a/site/index.html
+++ b/site/index.html
@@ -17,10 +17,8 @@
 
 </head>
 <body>
-<h2>Wow, fuck the what</h2>
-<p>This domain is currently for <a href="https://www.godaddy.com/domainsearch/find?checkAvail=1&domainToCheck=wowfuckthewhat">sale</a>.</p>
-
+<h2>Contact about u/find-song</h2>
+<p>Hi there, thanks for reaching out.
+  <br>For a quicker response, please message me on <a href="https://www.discordapp.com/users/164115540426752001">Discord</a>.
+  <br>Or, you can try me on <a href="https://www.reddit.com/message/compose?to=Fhyke&subject=contact about find-song">Reddit</a> as well</p>
 </body>
-<footer>
-<a href="mailto:mmfmh4@gmail.com">Contact</a>
-</footer>
